# lectures-and-homeworks

./: .clang-format  .gitattributes  .gitignore  LICENSE  Pipfile  Slides.code-workspace  readme.md  theme.css
.github/: .linkspector.yml  FUNDING.yml  mcl_config.json
.github/workflows/: action.yml
animation/: vite-plugin-markdown-snippets.ts
animation/all_or_nothing/: package-lock.json
animation/all_or_nothing/src/: project.ts
animation/all_or_nothing/src/scenes/: example.tsx  memory.tsx  stealing.tsx
animation/class_headers/: package.json
animation/class_headers/src/scenes/: example.tsx
animation/class_templates_why/: package.json
animation/class_templates_why/src/scenes/: example.tsx
animation/error_handling/: package-lock.json  package.json
animation/error_handling/src/scenes/: example.tsx
animation/forwarding_references/: package-lock.json
animation/forwarding_references/src/: project.ts
animation/forwarding_references/src/functions/: functions.tsx
animation/forwarding_references/src/scenes/: example.tsx
animation/inheritance/: package-lock.json  package.json
animation/inheritance/src/scenes/: example.tsx
animation/lambdas/: package-lock.json
animation/lambdas/src/: project.ts
animation/lambdas/src/scenes/: code.tsx
animation/memory_and_smart_pointers/: package-lock.json  package.json  vite.config.ts
animation/memory_and_smart_pointers/src/: global.css  project.ts
animation/memory_and_smart_pointers/src/scenes/: code.tsx  heap.tsx  memory.tsx  memory_show.tsx  stack.tsx  stack_persistent.tsx
animation/object_lifecycle/: package-lock.json  package.json
animation/object_lifecycle/src/: project.ts
animation/object_lifecycle/src/scenes/: cat.tsx
animation/projects/: package-lock.json  package.json  tsconfig.json  vite.config.ts
animation/projects/src/: motion-canvas.d.ts  styles.ts  utils.ts
animation/projects/src/dummy/: project.ts
animation/projects/src/parallelism/: project.ts
animation/projects/src/std_function/: project.ts
animation/static_no_classes/: package-lock.json  package.json
animation/static_no_classes/src/: global.css  project.ts
animation/static_no_classes/src/scenes/: static_vis.tsx
animation/templates/: package-lock.json
animation/templates/src/: project.ts
animation/templates/src/scenes/: why.tsx
animation/templates_how_functions/: package.json
animation/templates_how_functions/src/: project.ts
animation/templates_how_functions/src/scenes/: mixing_params.tsx  template_print.tsx  three_types.tsx
animation/templates_why/: package-lock.json  vite.config.ts
animation/value_semantics/src/: project.ts
animation/value_semantics/src/scenes/: example.tsx  memory.tsx  stealing.tsx
animation/variant/: package-lock.json
animation/variant/src/: project.ts
animation/variant/src/scenes/: example.tsx
homeworks/1.1_hello_world_dissection/: homework.md
homeworks/homework_1/: homework.md
homeworks/homework_1/hello_world/: hello.cpp
homeworks/homework_2/: homework.md
homeworks/homework_3/: homework.md
homeworks/homework_4/: homework.md
homeworks/homework_5/: homework.md  script.md
homeworks/homework_5/pixelator/: .clang-format  CMakeLists.txt
homeworks/homework_5/pixelator/examples/: CMakeLists.txt  pixelate.cpp  use_ftxui.cpp  use_stb_image.cpp
homeworks/homework_5/pixelator/pixelator/: CMakeLists.txt
homeworks/homework_5/tui_pixelator/: CMakeLists.txt
homeworks/homework_5/tui_pixelator/examples/: CMakeLists.txt
homeworks/homework_5/tui_pixelator/tui_pixelator/: CMakeLists.txt
lectures/: 1.1_hello_world_dissection.md  1.2.1_namespaces_using.md  1.2_cpp_basic_types_and_variables.html  1.2_cpp_basic_types_and_variables.md  1.3_more_useful_types.md  1.3_namespaces_using.md  1.4_io_streams.md  1.4_more_useful_types.md  1.5_more_useful_types.md  1.6_associative_containers.md  1.7_control_structures.md  1.8_compilation_debugging.md  1.9_functions.md  all_or_nothing.cpp  all_or_nothing.md  associative_containers.md  build_systems.md  classes_constructors.md  classes_intro.md  cmake.md  cmake_install.md  compilation_debugging.md  const_correctness.md  control_structures.md  cpp_basic_types_and_variables.md  draft_performance.md  dummy.md  enums.md  error_handling.md  forwarding_references.md  functions.md  googletest.md  headers_and_libraries.md  headers_with_classes.md  hello_world_dissection.md  helper.cpp  implementation_inheritance.md  inheritance.md  io_streams.md  lambdas.md  (+28 more)
lectures/code/: a.out  all_or_nothing.cpp  test.cpp  values.cpp
lectures/code/class_headers/cmake_binary_lib/: CMakeLists.txt
lectures/code/class_headers/cmake_header_only_lib/: CMakeLists.txt
lectures/code/class_headers/cmake_header_only_lib/chatbot/: CMakeLists.txt
lectures/code/cmake_install/core_project/: CMakeLists.txt
lectures/code/cmake_install/core_project/cmake/: Config.cmake.in
lectures/code/cmake_install/core_project/core_project/: CMakeLists.txt  some_library.cpp  some_library.hpp
lectures/code/cmake_install/core_project/examples/: CMakeLists.txt
lectures/code/cmake_install/core_project_advanced/core_project/: CMakeLists.txt  some_library.cpp
lectures/code/cmake_install/core_project_advanced/header_only/: CMakeLists.txt  print_hello_header_only.hpp
lectures/code/make/make_sample/: Makefile
lectures/code/our_project/: CMakeLists.txt  readme.md
lectures/code/our_project/executables/: print_hello.cpp
lectures/code/our_project/our_project/: CMakeLists.txt
lectures/code/our_project/our_project/tools/: CMakeLists.txt  tools.cpp  tools.h
lectures/code/our_project/src/: CMakeLists.txt
lectures/code/our_project/src/executables/: CMakeLists.txt  print_hello.cpp
lectures/code/our_project/src/our_project/tools/: tools.cpp  tools.h
lectures/code/static_in_classes/: CMakeLists.txt  foo.hpp  main.cpp
lectures/code/static_no_classes/odr_violation/: CMakeLists.txt  main.cpp  other_lib.cpp  other_lib.hpp  our_cool_lib.cpp  our_cool_lib.hpp
lectures/images/: constexpr_diagram.md  types_diagram.md
scripts/: .gitattributes  Pipfile  validate_code_snippets.py
(+26 files in other folders)
